add signatures ongoing mockup, disable row click

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1025,15 +1025,15 @@
   "published-in-belgian-official-gazette-on": "Gepubliceerd in Belgisch Staatsblad op",
   "publication-empty": "Er is nog geen publicatie aangevraagd.",
   "search-error": "Er ging iets mis bij het zoeken",
-  "signature": "Handtekenen",
-  "signatures": "Handtekeningen",
+  "signature": "Ondertekenen",
+  "signatures": "Ondertekenen",
   "open-version": "Open versie",
   "signature-folder": "Handtekenmap",
   "different": "Verschillend",
   "x-documents-selected": "{count, plural, =1 {# document} other {# documenten}} geselecteerd",
   "validation-signature": "Validatie handtekening",
   "signature-needed": "Handtekening nodig?",
-  "signature-not-possible": "Het is niet mogelijk om dit document te laten handtekenen.",
+  "signature-not-possible": "Het is niet mogelijk om dit document te laten tekenen.",
   "unmarking-not-possible": "Dit document is reeds voorbereid om te laten tekenen en kan niet ongedaan gemaakt worden.",
   "counselor": "Raadgever",
   "date-approved": "Datum goedgekeurd",
@@ -1043,15 +1043,15 @@
   "edit-status": "Status aanpassen",
   "view-in-signinghub": "Bekijken in SigningHub",
   "send-to-signinghub": "Doorsturen naar SigningHub",
-  "present-for-signing": "Aanbieden voor handtekenen",
-  "signing-status": "Handtekenstatus",
+  "present-for-signing": "Aanbieden voor ondertekenen",
+  "signing-status": "Ondertekenstatus",
   "signing-status-prepared": "Voor te bereiden",
-  "signing-status-to-be-presented": "Door te sturen voor tekenen",
-  "signing-status-wait-for-signature": "Wacht op handtekening",
+  "signing-status-to-be-presented": "Door te sturen voor ondertekenen",
+  "signing-status-wait-for-signature": "Wacht op ondertekening",
   "signing-status-to-be-signed": "Te tekenen",
   "signing-status-marked": "Te tekenen",
-  "signing-status-signed-x-count": "Gehandtekend ({done}/{total})",
-  "signing-status-signed": "Gehandtekend",
+  "signing-status-signed-x-count": "Ondertekend ({done}/{total})",
+  "signing-status-signed": "Ondertekend",
   "publication-info": "Publicatie info",
   "update-publication-status-translation-requested": "Zet status op 'Naar vertaaldienst'",
   "update-publication-status-translation-received": "Zet status op 'Vertaling In'",
@@ -1149,7 +1149,7 @@
   "documents-on-approved-agenda-with-next-version": "Er is een recentere versie van deze agenda.",
   "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?",
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
-  "to-sign": "Te handtekenen",
+  "to-sign": "Te ondertekenen",
   "copy": "Kopiëren",
   "text-copied": "Tekst gekopieerd naar klembord.",
   "change-role": "Profiel switchen",
@@ -1208,7 +1208,7 @@
   "sent": "Verstuurd",
   "edit-list": "Lijst bewerken",
   "signing-hub-cc": "Kopie verzenden naar",
-  "to-sign-by": "Te handtekenen door",
+  "to-sign-by": "Te ondertekenen door",
   "to-approve-by": "Goed te keuren door",
   "to-approve": "Goed te keuren",
   "refused": "Geweigerd",
@@ -1216,20 +1216,20 @@
   "no-signers-selected": "Geen ondertekenaars gekozen",
   "no-approvers-selected": "Geen goedkeurders gekozen",
   "no-notification-addresses-selected": "Geen notificatieadressen gekozen",
-  "marked-for-signing": "Gemarkeerd voor handtekenen",
+  "marked-for-signing": "Gemarkeerd voor ondertekenen",
   "preview": "Voorvertoning",
   "filter-on-signer": "Filter op ondertekenaar",
   "filter-content": "Filter inhoud",
   "apply": "Toepassen",
   "email-address": "E-mailadres",
   "add-approval": "Goed te keuren door",
-  "start-signing": "Tekenen opstarten",
+  "start-signing": "Ondertekenen opstarten",
   "cannot-sign": "Kan niet ondertekenen",
   "cannot-sign-message": "Dit stuk is niet verbonden aan een agendapunt en kan niet aangeboden worden om getekend te worden.",
   "cannot-create-sign-flow-message": "Dit stuk is niet ingediend door uw mandataris en kan niet aangeboden worden om getekend te worden.",
   "signed-document": "Getekend document",
   "on": "op",
-  "start-signing-for-n-selected-documents": "Tekenen opstarten voor {n, plural, =1 {1 geselecteerd document} other { # geselecteerde documenten }}",
+  "start-signing-for-n-selected-documents": "Ondertekenen opstarten voor {n, plural, =1 {1 geselecteerd document} other { # geselecteerde documenten }}",
   "create-sign-flow-conflicting-signers-title": "Ondertekenaars zijn niet automatisch ingevuld",
   "create-sign-flow-conflicting-signers-message": "De gekozen bestanden zijn geagendeerd door verschillende ministers waardoor Kaleidos de ondertekenaars niet automatisch kan bepalen.",
   "creating-sign-flows-message": "Handtekenstromen worden aangemaakt. Dit kan even duren.",
@@ -1237,7 +1237,7 @@
   "create-minutes-click-create-button-message": "Klik op \"Aanmaken\" om de notulen aan te maken",
   "no-minutes-for-meeting": "Er zijn nog geen notulen voor deze vergadering",
   "create-sign-flow-error-message": "Er ging iets mis met het doorsturen van dit document, contacteer kaleidos.servicedesk@vlaanderen.be als het probleem aanhoudt.",
-  "create-sign-marking-error-message": "Er ging iets mis met het markeren van dit document voor handtekenen, contacteer kaleidos.servicedesk@vlaanderen.be als het probleem aanhoudt.",
+  "create-sign-marking-error-message": "Er ging iets mis met het markeren van dit document voor ondertekenen, contacteer kaleidos.servicedesk@vlaanderen.be als het probleem aanhoudt.",
   "successfully-started-sign-flow": "Tekenproces succesvol opgestart",
   "successfully-started-sign-flows": "Tekenprocessen succesvol opgestart",
   "document-was-sent-to-signinghub": "Het document werd doorgestuurd naar SigningHub en kan worden voorbereid",
@@ -1249,7 +1249,7 @@
   "delete-all-sign-flow-tooltip": "Verwijder het volledige handtekenproces uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
   "to-start-up": "Op te starten",
   "to-follow-up": "Op te volgen",
-  "stop-sign-flow": "Tekenen stopzetten",
+  "stop-sign-flow": "Ondertekenen stopzetten",
   "sign-flow-was-sent-while-you-were-editing-could-not-add-new-version": "Dit document is reeds verstuurd naar de Handtekenmap. De nieuwe versie is niet geüpload.",
   "sign-flow-was-sent-while-you-were-editing-could-not-edit": "Dit document is reeds verstuurd naar de Handtekenmap. De wijzigingen zijn niet opgeslagen.",
   "sign-flow-was-sent-while-you-were-editing-could-not-delete": "Dit document is reeds verstuurd naar de Handtekenmap. Het document is niet verwijderd uit Kaleidos.",
