--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1035,6 +1035,7 @@
   "counselor": "Raadgever",
   "date-approved": "Datum goedgekeurd",
   "consult-agendaitem-decision": "Laatste agendering bekijken",
+  "consult-minutes": "Notulen bekijken",
   "postponed": "Uitgesteld",
   "date-example": "bv. 01-2022",
   "edit-status": "Status aanpassen",
@@ -1215,6 +1216,7 @@
   "start-signing-for-n-selected-documents": "Ondertekenen opstarten voor {n, plural, =1 {1 geselecteerd document} other { # geselecteerde documenten }}",
   "create-sign-flow-conflicting-signers-title": "Ondertekenaars zijn niet automatisch ingevuld",
   "create-sign-flow-conflicting-signers-message": "De geselecteerde documenten zijn door verschillende ministers ingediend. Kaleidos kan de namen van de ondertekenaars niet automatisch invullen.",
+  "create-sign-flow-conflicting-secretaries-message": "De geselecteerde documenten hebben verschillende secretarissen. Kaleidos kan de namen van de ondertekenaars niet automatisch invullen.",
   "creating-sign-flows-message": "De ondertekenflows worden aangemaakt in het platform Digitaal Ondertekenen. Dit kan even duren.",
   "ongoing": "In verwerking",
   "create-minutes-click-create-button-message": "Klik op \"Aanmaken\" om de notulen aan te maken",
