chore: use edited on if the report has multiple revisions

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -96,6 +96,7 @@
   "create-single-newsletter": "Losstaand kort bestek aanmaken",
   "create-subcase": "Procedurestap toevoegen",
   "created-on": "Aangemaakt op",
+  "edited-on": "Bijgewerkt op",
   "current-subcase": "Huidige procedurestap",
   "dash": "-",
   "date": "Datum",
