Added editing field for Annotatie to decision editor

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1178,6 +1178,7 @@
   "news-items": "Kort bestek berichten",
   "document-not-on-agendaitem": "Niet geüpload in agendapunt",
   "export-as-pdf": "Exporteren als PDF",
+  "annotation": "Annotatie",
   "concerns": "Betreft",
   "update-thing": "{thing} updaten",
   "current-version": "Huidige versie",
