feat: add publication statuses filter for search routes

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -732,6 +732,7 @@
   "close-agenda": "Agenda afsluiten",
   "table-of": " van ",
   "publication-flow": "Publicatie",
+  "publication-status": "Publicatie status",
   "publication-status-change": "Publicatie status wijziging",
   "mandatee-without-priority-message": "{name} heeft geen geldige prioriteit. Gelieve dit aan te passen in ministerbeheer of contacteer de administrator.",
   "publications-new-title-not-via-council-of-ministers": "Nieuwe publicatie (niet via Ministerraad)",
