--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1263,5 +1263,6 @@
   "minutes-report-generation--toast-generating--message": "De notulen worden aangepast.",
   "minutes-report-generation--toast-generating--title": "Notulen aanpassen",
   "minutes-report-generation--toast-generating-complete--message": "De notulen zijn aangepast.",
-  "minutes-report-generation--toast-generating-complete--title": "Notulen aangepast"
+  "minutes-report-generation--toast-generating-complete--title": "Notulen aangepast",
+  "loading-minutes": "De notulen worden opgesteld."
 }
