fix typo in translations

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -154,7 +154,7 @@
   "download-2": "Downloaden",
   "download-documents": "Download alle documenten",
   "download-decisions": "Download beslissingsfiches",
-  "download-all-decisions": "Download alle beslisingen",
+  "download-all-decisions": "Download alle beslissingen",
   "download-all-documents": "Download alle documenten",
   "drop-text": "Laat los om het bestand op te laden.",
   "dropzone-text-multiple": "Sleep je bestanden naar hier of klik hier om bestanden te selecteren.",
