--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1254,6 +1254,7 @@
   "minutes-retracted": "{mededelingOrNota} wordt ingetrokken.",
   "minutes-acknowledged": "De Vlaamse Regering neemt akte van {mededelingOrNota}.",
   "minutes-postponed": "{mededelingOrNota} wordt uitgesteld tot de volgende vergadering.",
+  "minutes-next-meeting": "De volgende vergadering van de Vlaamse Regering heeft plaats op {date} om {time} op het kabinet van de minister-president van de Vlaamse Regering, Martelaarsplein 19 - 1000 Brussel.",
   "postponed-item-decision": "Dit punt wordt uitgesteld tot de volgende vergadering.",
   "retracted-item-decision": "Dit punt wordt ingetrokken.",
   "decision-report-generation--toast-generating--message": "{total} beslissingen zullen worden aangepast.",
