add missing docs per subcase

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1258,5 +1258,6 @@
   "principal-approval": "Principiële goedkeuring",
   "this-case-was-submitted-to-VP-on": "Dit document is ingediend bij het Vlaams Parlement op",
   "error-while-sending-to-VP": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement",
-  "case-was-sent-to-VP": "Dossier is succesvol verstuurd naar het Vlaams Parlement"
+  "case-was-sent-to-VP": "Dossier is succesvol verstuurd naar het Vlaams Parlement",
+  "for": "Voor"
 }
