--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1264,5 +1264,6 @@
   "minutes-report-generation--toast-generating--title": "Notulen aanpassen",
   "minutes-report-generation--toast-generating-complete--message": "De notulen zijn aangepast.",
   "minutes-report-generation--toast-generating-complete--title": "Notulen aangepast",
-  "loading-minutes": "De notulen worden opgesteld."
+  "loading-minutes": "De notulen worden opgesteld.",
+  "sign-decisions": "Beslissingen aanbieden voor ondertekenen"
 }
