--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1265,5 +1265,8 @@
   "minutes-report-generation--toast-generating-complete--message": "De notulen zijn aangepast.",
   "minutes-report-generation--toast-generating-complete--title": "Notulen aangepast",
   "loading-minutes": "De notulen worden opgesteld.",
-  "sign-decisions": "Beslissingen aanbieden voor ondertekenen"
+  "sign-decisions": "Beslissingen aanbieden voor ondertekenen",
+  "decision-reports-are-being-marked-for-signing": "De beslissingen worden aangeboden voor ondertekenen",
+  "decision-reports-are-marked-for-signing": "De beslissingsfiches zijn succesvol aangeboden voor ondertekenen",
+  "error-while-marking-decision-reports-for-signing": "Er ging iets fout tijdens het markeren voor ondertekenen"
 }
