--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1263,7 +1263,7 @@
   "this-case-is-missing": "Dit dossier mist nog",
   "definitive-approval": "Definitieve goedkeuring",
   "principal-approval": "Principiële goedkeuring",
-  "this-case-was-submitted-to-VP-on": "Dit document is ingediend bij het Vlaams Parlement op",
+  "this-case-was-submitted-to-VP-on": "Dit dossier is ingediend bij het Vlaams Parlement op",
   "error-while-sending-to-VP": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement",
   "case-was-sent-to-VP": "Dossier is succesvol verstuurd naar het Vlaams Parlement",
   "for": "Voor",
