feat: fetch all pieces and separate pieces that are ready to be sent
All pieces are used to determine what has already been sent, pieces
ready to be sent is what will be sent in the next submission.

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1283,5 +1283,6 @@
   "decision-reports-are-marked-for-signing": "De {aantal, plural, =1 {beslissing is} other {# beslissingen zijn}} succesvol aangeboden voor ondertekenen",
   "error-while-marking-decision-reports-for-signing": "Er ging iets fout tijdens het markeren voor ondertekenen",
   "no-decision-reports-to-mark-for-signing": "Er zijn geen beslissingen om aan te bieden voor ondertekenen",
-  "remarks": "Opmerkingen"
+  "remarks": "Opmerkingen",
+  "no-new-files-will-be-sent": "Er worden geen nieuwe bestanden doorgestuurd"
 }
