--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1263,7 +1263,7 @@
   "definitive-approval": "Definitieve goedkeuring",
   "principal-approval": "Principiële goedkeuring",
   "this-case-was-submitted-to-VP-on": "Dit dossier is ingediend bij het Vlaams Parlement op",
-  "error-while-sending-to-VP": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement",
+  "error-while-sending-to-VP-message": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement. Probeer het opnieuw. Als het probleem niet opgelost is, neem dan contact op met kaleidos.servicedesk@vlaanderen.be. Gelieve volgende boodschap te vermelden:",
   "case-was-sent-to-VP": "Dossier is succesvol verstuurd naar het Vlaams Parlement",
   "for": "Voor",
   "minutes-next-meeting": "De volgende vergadering van de Vlaamse Regering heeft plaats op {date} om {time} op het kabinet van de minister-president van de Vlaamse Regering, Martelaarsplein 19 - 1000 Brussel.",
