feat: add button to create decisions bundle with only signed reports

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -154,7 +154,8 @@
   "download-2": "Downloaden",
   "download-documents": "Download alle documenten",
   "download-decisions": "Download beslissingsfiches",
-  "generate-decisions-bundle": "Genereer beslissingenbundel",
+  "generate-all-decisions-bundle": "Genereer beslissingenbundel",
+  "generate-signed-decisions-bundle": "Genereer beslissingenbundel (ondertekende versies)",
   "download-all-decisions": "Download alle beslissingen",
   "download-all-documents": "Download alle documenten",
   "drop-text": "Laat los om het bestand op te laden.",
