--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1264,6 +1264,10 @@
   "principal-approval": "Principiële goedkeuring",
   "this-case-was-incompletely-submitted-to-VP-on": "Dit dossier is onvolledig en doorgestuurd naar het Vlaams Parlement op",
   "this-case-was-completely-submitted-to-VP-on": "Dit dossier is volledig en doorgestuurd naar het Vlaams Parlement op",
+  "this-case-was-completely-submitted-on": "Dit dossier is volledig doorgestuurd op",
+  "this-case-was-submitted-to-VP-on": "Dit dossier is doorgestuurd naar het Vlaams Parlement op",
+  "this-case-is-being-handled-by-VP": "en wordt behandeld door het",
+  "flemish-parliament": "Vlaams Parlement",
   "error-while-sending-to-VP-message": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement. Probeer het opnieuw. Als het probleem niet opgelost is, neem dan contact op met kaleidos.servicedesk@vlaanderen.be. Gelieve volgende boodschap te vermelden:",
   "case-was-sent-to-VP": "Dossier is succesvol verstuurd naar het Vlaams Parlement",
   "for": "Voor",
