--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1283,5 +1283,9 @@
   "decision-reports-are-being-marked-for-signing": "De {aantal, plural, =1 {beslissing wordt} other {# beslissingen worden}} aangeboden voor ondertekenen",
   "decision-reports-are-marked-for-signing": "De {aantal, plural, =1 {beslissing is} other {# beslissingen zijn}} succesvol aangeboden voor ondertekenen",
   "error-while-marking-decision-reports-for-signing": "Er ging iets fout tijdens het markeren voor ondertekenen",
-  "no-decision-reports-to-mark-for-signing": "Er zijn geen beslissingen om aan te bieden voor ondertekenen"
+  "no-decision-reports-to-mark-for-signing": "Er zijn geen beslissingen om aan te bieden voor ondertekenen",
+  "current-government-areas": "Huidige beleidsdomeinen",
+  "past-government-areas": "Vorige beleidsdomeinen",
+  "show-past-government-areas": "Toon vorige beleidsdomeinen",
+  "hide-past-government-areas": "Verberg vorige beleidsdomeinen"
 }
