KAS-1134 rework pdf bundling to query all reports in backend

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -154,8 +154,7 @@
   "download-2": "Downloaden",
   "download-documents": "Download alle documenten",
   "download-decisions": "Download beslissingsfiches",
-  "generate-all-decisions-bundle": "Genereer beslissingenbundel",
-  "generate-signed-decisions-bundle": "Genereer beslissingenbundel (ondertekende versies)",
+  "generate-signed-decisions-bundle": "Genereer alle beslissingen PDF",
   "download-all-decisions": "Download alle beslissingen",
   "download-all-documents": "Download alle documenten",
   "drop-text": "Laat los om het bestand op te laden.",
@@ -1190,8 +1189,8 @@
   "error-while-generating-report-name-pdf": "Er ging iets mis tijdens het aanmaken van de beslissingsfiche {name}. Reden: {error}",
   "error-while-generating-report-pdfs": "Er ging iets mis tijdens het aanmaken van de beslissingsfiches. Reden: {error}",
   "error-while-generating-report-pdfs-no-reason": "Er ging iets mis tijdens het aanmaken van de beslissingsfiches.",
-  "error-while-generating-report-bundle": "Er ging iets mis tijdens het bundelen van de beslissingsfiches. Reden: {error}",
-  "error-while-generating-report-bundle-no-reason": "Er ging iets mis tijdens het bundelen van de beslissingsfiches.",
+  "error-while-generating-report-bundle": "Er ging iets mis tijdens het aanmaken van alle beslissingen PDF. Reden: {error}",
+  "error-while-generating-report-bundle-no-reason": "Er ging iets mis tijdens het aanmaken van alle beslissingen PDF.",
   "error-while-generating-minutes-pdf": "Er ging iets mis tijdens het aanmaken van de notulen",
   "version-of-date-at-time": "Versie van {date} om {time}",
   "download-agenda-documents-info": "Deze functie brengt standaard alle documenten van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de documenten ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
@@ -1268,10 +1267,10 @@
   "decision-report-generation--toast-generating--title": "Beslissingen aanpassen",
   "decision-report-generation--toast-generating-complete--message": "{total, plural, =1 {1 beslissing is} other {# beslissingen zijn}} aangepast.",
   "decision-report-generation--toast-generating-complete--title": "Beslissingen aangepast",
-  "decision-report-bundle-generation--toast-generating--message": "{total, plural, =1 {1 beslissing zal} other {# beslissingen zullen}} gebundeld worden.",
-  "decision-report-bundle-generation--toast-generating--title": "Beslissingen bundelen",
-  "decision-report-bundle-generation--toast-generating-complete--message": "{total, plural, =1 {1 beslissing is} other {# beslissingen zijn}} gebundeld.",
-  "decision-report-bundle-generation--toast-generating-complete--title": "Beslissingen gebundeld",
+  "decision-report-bundle-generation--toast-generating--message": "Alle beslissingen PDF wordt aangemaakt.",
+  "decision-report-bundle-generation--toast-generating--title": "Alle beslissingen PDF aanmaken",
+  "decision-report-bundle-generation--toast-generating-complete--message": "Deze is toegevoegd aan de documenten van de vergadering.",
+  "decision-report-bundle-generation--toast-generating-complete--title": "Alle beslissingen PDF aangemaakt",
   "minutes-report-generation--toast-generating--message": "De notulen worden aangepast.",
   "minutes-report-generation--toast-generating--title": "Notulen aanpassen",
   "minutes-report-generation--toast-generating-complete--message": "De notulen zijn aangepast.",
