--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1266,7 +1266,7 @@
   "minutes-postponed": "{mededelingOrNota} wordt uitgesteld tot de volgende vergadering.",
   "send-to-VP": "Doorsturen naar het Vlaams Parlement",
   "check-case": "Dossier controleren",
-  "the-following-things-will-be-sent": "De volgende documenten worden doorgestuurd",
+  "the-following-things-will-be-sent": "De volgende documenten worden doorgestuurd:",
   "this-case-is-missing": "In dit dossier ontbreekt nog",
   "definitive-approval": "Definitieve goedkeuring",
   "principal-approval": "Principiële goedkeuring",
@@ -1274,6 +1274,8 @@
   "this-case-was-completely-submitted-to-VP-on": "Dit dossier is volledig ingediend. De documenten werden naar het Vlaams Parlement verzonden op",
   "this-case-was-completely-submitted-on": "Dit dossier is volledig ingediend op",
   "this-case-is-being-handled-by-VP": "en wordt behandeld door het",
+  "decision-not-published-yet": "Beslissing is nog niet vrijgegeven",
+  "decision-not-published-yet-may-be-altered": "De beslissing is nog niet goedgekeurd op de Ministerraad. Een wijziging is nog mogelijk.",
   "flemish-parliament": "Vlaams Parlement",
   "this-case-was-submitted-to-VP-on": "Dit dossier is doorgestuurd naar het Vlaams Parlement op",
   "error-while-sending-to-VP-message": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement. Probeer het opnieuw. Als het probleem niet opgelost is, neem dan contact op met kaleidos.servicedesk@vlaanderen.be. Gelieve volgende boodschap te vermelden:",
@@ -1307,7 +1309,7 @@
   "show-past-government-areas": "Toon vorige beleidsdomeinen",
   "hide-past-government-areas": "Verberg vorige beleidsdomeinen",
   "remarks": "Opmerkingen",
-  "no-new-files-will-be-sent": "Er worden geen nieuwe bestanden doorgestuurd",
+  "no-new-files-will-be-sent": "Er zijn geen nieuwe bestanden om door te sturen.",
   "documents-sent-on": "Documenten doorgestuurd op",
   "the-following-things-were-sent": "De volgende zaken werden doorgestuurd"
 }
