Updated submission alert after feedback from users

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1273,7 +1273,7 @@
   "this-case-was-incompletely-submitted-to-VP-on": "Dit dossier is onvolledig ingediend. De documenten werden naar het Vlaams Parlement verzonden op",
   "this-case-was-completely-submitted-to-VP-on": "Dit dossier is volledig ingediend. De documenten werden naar het Vlaams Parlement verzonden op",
   "this-case-was-completely-submitted-on": "Dit dossier is volledig ingediend op",
-  "this-case-is-being-handled-by-VP": "en wordt behandeld door het",
+  "this-case-is-being-handled-by-VP": "Volg het dossier op in het",
   "decision-not-published-yet": "Beslissing is nog niet vrijgegeven",
   "decision-not-published-yet-may-be-altered": "De beslissing is nog niet goedgekeurd op de Ministerraad. Een wijziging is nog mogelijk.",
   "flemish-parliament": "Vlaams Parlement",
