--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1314,5 +1314,6 @@
   "no-new-files-will-be-sent": "Er zijn geen nieuwe bestanden om door te sturen.",
   "documents-sent-on": "Documenten doorgestuurd op",
   "the-following-things-were-sent": "De volgende zaken werden doorgestuurd",
-  "general-information": "Algemene info"
+  "general-information": "Algemene info",
+  "government-areas-and-fields": "Beleidsdomeinen en beleidsvelden"
 }
