saveCase is now a task + changed uppercase in translations + changed function name of feature flag + added permission check around button for new functionality + split new from old code for easy removal + set default agendaItemType

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -5,7 +5,7 @@
   "add-attachments": "Documenten opladen",
   "add-attachment": "Document opladen",
   "add-case": "Nieuw dossier aanmaken",
-  "add-case-new": "Nieuw dossier aanmaken (Nieuw)",
+  "add-case-new": "Nieuw dossier aanmaken (nieuw)",
   "case-name": "Naam dossier",
   "case-name-concat": "Dossiernaam",
   "add-comment": "Opmerking toevoegen",
