KAS-4506 implement setting pdf as derived when adding a source file

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -293,6 +293,7 @@
   "notifications": "Meldingen",
   "number-session": "Nummer vergadering: ",
   "of": "van",
+  "or": "of",
   "on-agenda-for-meeting": "Geagendeerd voor de zitting van",
   "on-agenda-of": "Op agenda van",
   "on-agenda-for": "Geagendeerd voor:",
@@ -1078,6 +1079,7 @@
   "newsletters-tabs-overview": "Alle berichten",
   "source-file-lowercase": "bronbestand",
   "upload-derived-document": "Afgeleid document opladen",
+  "upload-source-document": "Bron document opladen",
   "word-document": "Word document",
   "as": "als",
   "limited-access": "Beperkte toegang",
